--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -102,7 +102,7 @@
                         <f:facet name="header">  
                             <h:outputText value="Genérico" />  
                         </f:facet> 
-                        <p:selectBooleanCheckbox value="#{medicamento_.generico}" />
+                        <p:selectBooleanCheckbox value="#{medicamento_.generico}" disabled="true"/>
                     </p:column>
                     <p:column style="width: 15%; text-align: center;">
                         <f:facet name="header">  
